--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <button type="button" class="btn btn-danger">Danger</button>
 </body>
 </html>
