--- a/index.html
+++ b/index.html
@@ -17,8 +17,23 @@
     <link rel="stylesheet" href="./button.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     
+    <div class="navbar">
+      <a href="https://www.techpowerup.com/">Home</a>
+      <a href="https://www.hwsw.hu/">News</a>
+      <div class="dropdown">
+        <button class="dropbtn">More
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="https://www.hwsw.hu/">link</a>
+          <a href="https://www.hwsw.hu/">Link 2</a>
+          <a href="https://www.hwsw.hu/">Link 3</a>
+        </div>
+      </div>
+    </div>
+
     <!-- Slideshow container -->
-<div class="slideshow-container">
+  <div class="slideshow-container">
 
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
@@ -39,12 +54,7 @@
     <div class="text"></div>
   </div>
 
-    <!-- Three buttons in a group -->
-  <div class="btn-group" style="width:100%">
-    <button style="width:33.3%">Hírek</button>
-    <button style="width:33.3%">Csapat</button>
-    <button style="width:33.3%">SonyFotóalbum</button>
-  </div>
+    
 
   <!-- Next and previous buttons -->
   <!--<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
