--- a/index.html
+++ b/index.html
@@ -32,13 +32,15 @@
     <link type="text/css" rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./button.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+    
     </head>
 
 <body>
     <header>
 
-      <!-- Slideshow container -->
+      
+
+     <!-- Slideshow container -->
     <div class="slideshow-container">
 
       <!-- Full-width Images -->
@@ -63,12 +65,23 @@
     <br>
 
     <div class="logo">
-      <img src="./images/logo.jpg" class="rounded-4">
+      <a href="http://127.0.0.1:5500/index.html"> <img src="http://127.0.0.1:5500/images/logo.jpg">
+
+
 
     </header>
     <main>
       </main>
   <br>
+
+    <div class="scrollmenu">
+    <a href="./hirek.html">Hírek</a>
+    <a href="./csapat.html">Csapat</a>
+    <a href="./galeria.html">Galeria</a>
+    <a href="./kapcsolat.html">Kapcsolat</a>
+    ...
+  </div>
+
   <br>
    
   <h1>Honlap</h1>
